--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
         rel="stylesheet">
 
         <!--bootstrap css-->
-        <link rel="stylesheet" href="assets/CSS/bootsrap/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/CSS/bootstrap/bootstrap.min.css">
         <!--main style-->
         <link rel="stylesheet" href="assets/CSS/contactcss.css">
          <!--main style-->
@@ -127,4 +127,4 @@
 <script src="assets/JS/jquery.js"></script>
 
 <!--bootstrap js-->
-<script src="assets/JS/bootstrap/bootstrap.min.js"></script>
+<script src="assets/JS/bootstrap/bootstrap.js"></script>
