--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i"
             rel="stylesheet">
         <!--bootstrap css-->
-        <link rel="stylesheet" href="assets/CSS/bootsrap/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/CSS/bootstrap/bootstrap.min.css">
         <!--main style-->
         <link rel="stylesheet" href="assets/CSS/style css.css">
 
@@ -133,6 +133,6 @@
 <script src="assets/JS/jquery.js"></script>
 
 <!--bootstrap js-->
-<script src="assets/JS/bootstrap/bootstrap.min.js"></script>
+<script src="assets/JS/bootstrap/bootstrap.js"></script>
 
 
