number 5 good to go

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
         <!--bootstrap css-->
         <link rel="stylesheet" href="assets/CSS/bootstrap/bootstrap.min.css">
         <!--main style-->
-        <link rel="stylesheet" href="assets/CSS/style css.css">
+        <link rel="stylesheet" href="assets/CSS/portfolio css.css">
 
     </head>
     <body>
@@ -68,15 +68,15 @@
         
                 </section>
         <section id = "portfolio-id">
-            <div class ="countainer-big row ">
-                <div class = "col-md-2"></div>
-        <div class="portfolio col-md-8">
+            <div class ="row countainer-big  ">
+                
+        <div class="portfolio-container-1 col-md-12">
             <div class="portfolio-title text-center">
                 <h3>Portfolio</h3>
                 <div class="portfolio-header-line"></div>
             </div>
             <div class="row portfolio-container">
-                <div class="col-sm-4  ">
+                <div class="col-sm-6  ">
                     <div class="project-one">
                         <div class=" text-center  project-one-title">
                             <h3>Hangman</h3>
@@ -84,7 +84,7 @@
                     </div>
 
                 </div>
-                <div class="col-sm-4 ">
+                <div class="col-sm-6 ">
                     <div class="project-two">
                         <div class=" text-center  project-two-title">
                             <h3>RPG</h3>
@@ -92,13 +92,8 @@
                     </div>
 
                 </div>
-                <div class="col-sm-4 project-three ">
-                    <div></div>
-                    <div class=" text-center  project-three-title">
-                        <h3></h3>
-                    </div>
-                </div>
-                <div class="col-sm-4 ">
+
+                <div class="col-sm-6 ">
                     <div class="project-four">
                         <div class=" text-center  project-four-title">
                             <h3>Trivia Game</h3>
@@ -106,7 +101,7 @@
                     </div>
 
                 </div>
-                <div class="col-sm-4 ">
+                <div class="col-sm-6 ">
                     <div class="project-five">
                         <div class=" text-center  project-five-title">
                             <h3>Rutgers info Widget</h3>
@@ -114,13 +109,8 @@
                     </div>
 
                 </div>
-                <div class="col-sm-4 ">
-                    <div class="project-six"></div>
-                    <div class=" text-center  project-six-title">
-                        <h3></h3>
-                    </div>
-                </div>
-                <div class="col-sm-4 ">
+
+                <div class="col-sm-6 ">
                     <div class="project-seven">
                         <div class=" text-center  project-seven-title">
                             <h3>Rock Paper Scissors</h3>
@@ -128,13 +118,13 @@
                     </div>
 
                 </div>
-                <div class="col-sm-4 ">
+                <div class="col-sm-6 ">
                     <div class="project-eight"></div>
                     <div class=" text-center  project-eight-title">
                         <h3></h3>
                     </div>
                 </div>
-                <div class="col-sm-4 ">
+                <div class="col-sm-6 ">
                     <div class="project-nine"></div>
                     <div class=" text-center  project-nine-title">
                         <h3></h3>
