updated wth game

--- a/portfolio.html
+++ b/portfolio.html
@@ -103,11 +103,12 @@
                     </div>
 
                 </div>
+                
 
                 <div class="col-sm-6 ">
                     <div class="project-four">
                         <div class=" text-center  project-four-title">
-                            <h3>Trivia Game</h3>
+                            <a class="page-link" href="https://hutwagnert.github.io/triviagame/trivia-game.html">Trivia Game</a>
                         </div>
                     </div>
 
