needs work but out out of time

--- a/contact.html
+++ b/contact.html
@@ -58,21 +58,20 @@
                     <div class="row">
                             <form class="col s12">
                                     <div class="row">
-                                            <div class="input-field col s12">
-                                              <input placeholder="Please enter your full Name" id="name" type="text" class="validate">
-                                              <label for="Name">Name</label>
-                                            </div>
+                                            <div class="col-sm-12  text-center waves-effect waves-light">
+                                              <h4 class = "link-email" id ="myInput" >hutwagnert@gmail.com</h4>
+
+                                             
+                                          </div>
                                           </div>
                               <div class="row">
-                                <div class="input-field col s12">
-                                  <input placeholder="Please enter a valid email" id="email" type="email" class="validate">
-                                  <label for="email">Email</label>
+                                <div class=" col-sm-12 text-center waves-effect waves-light">
+                                  <h4 class = "link-button">LinkedIn</h4>
                                 </div>
                               </div>
                               <div class="row">
-                                    <div class="input-field col s12">
-                                      <input placeholder="Please enter any comments for me" id="comment" type="text" class="validate">
-                                      <label for="comments">Comments</label>
+                                    <div class=" col-sm-12 text-center waves-effect waves-light">
+                                      <h4 class = "resume-button" src = "" >Resume</h4>
                                     </div>
                                   </div>
     
