--- a/portfolio.html
+++ b/portfolio.html
@@ -96,8 +96,8 @@
                 </div>
                 <div class="col-sm-6 project-holder">
                     <div class="project-five z-depth-3 waves-effect waves-light">
-                        <div class=" text-center  project-title valign-wrapper ">
-                            <h3>Rutgers info Widget</h3>
+                        <div class=" text-center  project-title valign-wrapper rock">
+                            <h3>Rock Paper Scissors</h3>
                         </div>
                     </div>
 
@@ -111,8 +111,8 @@
 
                 <div class="col-sm-6 project-holder">
                     <div class="project-seven z-depth-3 waves-effect waves-light">
-                        <div class=" text-center  project-title valign-wrapper ">
-                            <h3>Rock Paper Scissors</h3>
+                        <div class=" text-center  project-title valign-wrapper first ">
+                            <h3>First Project</h3>
                         </div>
                     </div>
 
